--- a/彩灯上位机/MainWindow.xaml
+++ b/彩灯上位机/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="彩灯上位机.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="彩灯上位机" Height="496.55" Width="621.375" Closing="Window_Closing_1" ResizeMode="CanMinimize" Icon="icon.ico">
+        Title="彩灯上位机 —— RGB Pad Control" Height="496.55" Width="621.375" Closing="Window_Closing_1" ResizeMode="CanMinimize" Icon="icon.ico">
     <Grid Margin="0,0,0,0" Height="358" VerticalAlignment="Top">
 
         <Grid HorizontalAlignment="Left" Height="341" VerticalAlignment="Top" Width="613" Background="#99FFFFFF">
@@ -21,43 +21,44 @@
             <CheckBox Content="14" x:Name="cb14"  HorizontalAlignment="Left" Margin="150,195,0,0" VerticalAlignment="Top" Click="CheckBox_Click_13"/>
             <CheckBox Content="15" x:Name="cb15"  HorizontalAlignment="Left" Margin="193,195,0,0" VerticalAlignment="Top" Click="CheckBox_Click_14"/>
             <CheckBox Content="16" x:Name="cb16"  HorizontalAlignment="Left" Margin="238,195,0,0" VerticalAlignment="Top" Click="CheckBox_Click_15"/>
-            <Label Content="使用单点控制开关请先关闭灯效" HorizontalAlignment="Left" Margin="87,358,0,-42" VerticalAlignment="Top"/>
+            <Label Content="Use the single-point control must close all firstly" HorizontalAlignment="Left" Margin="29,355,0,-39" VerticalAlignment="Top" Height="25" Width="296"/>
             <Image HorizontalAlignment="Left" Height="19" Margin="114,250,0,0" VerticalAlignment="Top" Width="171" Source="hsb.png"/>
         </Grid>
-        <GroupBox Header="设备操作" HorizontalAlignment="Left" Margin="11,112,0,-86" VerticalAlignment="Top" Height="332" Width="327" RenderTransformOrigin="0.5,0.5">
+        <GroupBox Header="Control" HorizontalAlignment="Left" Margin="11,112,0,-86" VerticalAlignment="Top" Height="332" Width="327" RenderTransformOrigin="0.5,0.5">
             <Canvas x:Name="cv_show" HorizontalAlignment="Left" Height="19" Margin="54,92,0,0" VerticalAlignment="Top" Width="20"/>
 
         </GroupBox>
 
-        <GroupBox Header="指令" HorizontalAlignment="Left" Margin="343,12,0,-86" VerticalAlignment="Top" Height="432" Width="252"/>
+        <GroupBox Header="Command-console" HorizontalAlignment="Left" Margin="343,12,0,-53" VerticalAlignment="Top" Height="399" Width="252"/>
 
-        <Label Content="串口" HorizontalAlignment="Left" Margin="28,36,0,0" VerticalAlignment="Top"/>
+        <Label Content="Port" HorizontalAlignment="Left" Margin="28,36,0,0" VerticalAlignment="Top"/>
         <ComboBox x:Name="lsCom" HorizontalAlignment="Left" Margin="82,40,0,0" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="btOpen" Content="打开" HorizontalAlignment="Left" Margin="234,40,0,0" VerticalAlignment="Top" Width="75" Click="btOpen_Click"/>
-        <Label Content="波特率" HorizontalAlignment="Left" Margin="28,63,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btOpen" Content="Open" HorizontalAlignment="Left" Margin="234,40,0,0" VerticalAlignment="Top" Width="75" Click="btOpen_Click"/>
+        <Label Content="Baud" HorizontalAlignment="Left" Margin="28,63,0,0" VerticalAlignment="Top"/>
         <ComboBox x:Name="lsBoud" HorizontalAlignment="Left" Margin="82,67,0,0" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="btNew" Content="刷新" HorizontalAlignment="Left" Margin="234,67,0,0" VerticalAlignment="Top" Width="75" Click="btNew_Click"/>
+        <Button x:Name="btNew" Content="Refresh" HorizontalAlignment="Left" Margin="234,67,0,0" VerticalAlignment="Top" Width="75" Click="btNew_Click"/>
         <TextBox x:Name="txtCmd" HorizontalAlignment="Left" Height="60" Margin="402,49,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="188" AcceptsReturn="True"/>
-        <Button x:Name="btRead" Content="关闭" HorizontalAlignment="Left" Margin="116,389,0,-51" VerticalAlignment="Top" Width="44" Click="btRead_Click" Height="20"/>
-        <Button x:Name="btWrite" Content="发送" HorizontalAlignment="Left" Margin="402,127,0,0" VerticalAlignment="Top" Width="74" Click="btWrite_Click"/>
-        <TextBox x:Name="txtLog" HorizontalAlignment="Left" Height="263" Margin="402,169,0,-74" TextWrapping="Wrap" VerticalAlignment="Top" Width="188"/>
-        <Label Content="指令" HorizontalAlignment="Left" Margin="362,49,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btRead" Content="Close" HorizontalAlignment="Left" Margin="116,389,0,-51" VerticalAlignment="Top" Width="44" Click="btRead_Click" Height="20"/>
+        <Button x:Name="btWrite" Content="Send" HorizontalAlignment="Left" Margin="402,127,0,0" VerticalAlignment="Top" Width="74" Click="btWrite_Click"/>
+        <TextBox x:Name="txtLog" HorizontalAlignment="Left" Height="227" Margin="402,169,0,-38" TextWrapping="Wrap" VerticalAlignment="Top" Width="188"/>
+        <Label Content="CMD" HorizontalAlignment="Left" Margin="362,49,0,0" VerticalAlignment="Top"/>
         <Label Content="LOG" HorizontalAlignment="Left" Margin="360,155,0,0" VerticalAlignment="Top"/>
 
-        <Button x:Name="btSet" Content="全开" HorizontalAlignment="Left" Margin="107,221,0,0" VerticalAlignment="Top" Width="75" Click="btSet_Click"/>
-        <Button x:Name="btSet2" Content="全关" HorizontalAlignment="Left" Margin="194,221,0,0" VerticalAlignment="Top" Width="75" Click="BtSet2_Click"/>
-        <Label Content="灯效：" HorizontalAlignment="Left" Margin="61,386,0,-53" VerticalAlignment="Top"/>
-        <Button x:Name="btSetVal2" Content="灯效+" HorizontalAlignment="Left" Margin="175,389,0,-50" VerticalAlignment="Top" Width="41" Click="BtSetVal2_Click"/>
-        <Button x:Name="btSetVal3" Content="灯效-" HorizontalAlignment="Left" Margin="228,389,0,-50" VerticalAlignment="Top" Width="41" Click="BtSetVal3_Click"/>
-        <GroupBox Header="连接" HorizontalAlignment="Left" Margin="11,12,0,0" VerticalAlignment="Top" Height="95" Width="327"/>
-        <Button Content="清空" HorizontalAlignment="Left" Margin="500,127,0,0" VerticalAlignment="Top" Width="76" Click="Button_Click_1"/>
-        <Label Content="选灯" HorizontalAlignment="Left" Margin="61,138,0,0" VerticalAlignment="Top"/>
-        <Label Content="色相" HorizontalAlignment="Left" Margin="61,248,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btSet" Content="Open All" HorizontalAlignment="Left" Margin="107,221,0,0" VerticalAlignment="Top" Width="75" Click="btSet_Click"/>
+        <Button x:Name="btSet2" Content="Close All" HorizontalAlignment="Left" Margin="194,221,0,0" VerticalAlignment="Top" Width="75" Click="BtSet2_Click"/>
+        <Label Content="Lamp：" HorizontalAlignment="Left" Margin="61,386,0,-53" VerticalAlignment="Top"/>
+        <Button x:Name="btSetVal2" Content="+" HorizontalAlignment="Left" Margin="175,389,0,-50" VerticalAlignment="Top" Width="41" Click="BtSetVal2_Click"/>
+        <Button x:Name="btSetVal3" Content="-" HorizontalAlignment="Left" Margin="228,389,0,-50" VerticalAlignment="Top" Width="41" Click="BtSetVal3_Click"/>
+        <GroupBox Header="Connection Serial " HorizontalAlignment="Left" Margin="11,12,0,0" VerticalAlignment="Top" Height="95" Width="327"/>
+        <Button Content="Clear" HorizontalAlignment="Left" Margin="500,127,0,0" VerticalAlignment="Top" Width="76" Click="Button_Click_1"/>
+        <Label Content="NO." HorizontalAlignment="Left" Margin="61,138,0,0" VerticalAlignment="Top"/>
+        <Label Content="Hue" HorizontalAlignment="Left" Margin="61,248,0,0" VerticalAlignment="Top"/>
         <Slider x:Name="sdrH" HorizontalAlignment="Left" Margin="111,271,0,0" VerticalAlignment="Top" Height="28" Width="179" Maximum="100" LostMouseCapture="SdrH_LostMouseCapture"/>
-        <Label Content="饱和" HorizontalAlignment="Left" Margin="61,296,0,0" VerticalAlignment="Top"/>
+        <Label Content="Saturation" HorizontalAlignment="Left" Margin="28,296,0,0" VerticalAlignment="Top"/>
         <Slider x:Name="sdrS" HorizontalAlignment="Left" Margin="111,302,0,0" VerticalAlignment="Top" Height="28" Width="179" Maximum="100" LostMouseCapture="SdrS_LostMouseCapture" Value="100"/>
-        <Label Content="亮度" HorizontalAlignment="Left" Margin="61,324,0,0" VerticalAlignment="Top"/>
+        <Label Content="Brightness" HorizontalAlignment="Left" Margin="28,324,0,0" VerticalAlignment="Top"/>
         <Slider x:Name="sdrB" HorizontalAlignment="Left" Margin="111,330,0,0" VerticalAlignment="Top" Height="28" Width="179" Maximum="100" LostMouseCapture="SdrB_LostMouseCapture" Value="100"/>
+        <Button Content="About" HorizontalAlignment="Left" Height="22" Margin="343,422,0,-86" VerticalAlignment="Top" Width="247" Click="Button_Click"/>
 
     </Grid>
 </Window>
