--- a/彩灯上位机/App.xaml
+++ b/彩灯上位机/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="智慧家庭安装工具.App"
+﻿<Application x:Class="彩灯上位机.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
